--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="content">
-        <h1>Welcome to My Professional Portfolio</h1>
+        <h1>Welcome to My Site</h1>
         <p>
             I am <strong>Ambili A.R</strong>, Assistant Professor in the Department of Electronics and Communication Engineering at FISAT.
             With extensive academic, research, and administrative experience, I have contributed to numerous projects, publications,
@@ -32,8 +32,8 @@
 
         <h2>Highlights</h2>
         <ul>
-            <li>PhD in Electronics and Communication Engineering</li>
-            <li>Over 10 years of teaching experience</li>
+            <li>Pursuing PhD in Deep Learning based Speech Processing</li>
+            <li>Over 17 years of teaching experience</li>
             <li>Published multiple research papers in international journals & IEEE conferences</li>
             <li>Guided 47+ B.Tech and 5 M.Tech projects</li>
             <li>Expertise in Machine Learning, Deep Learning, NLP, Speech Processing</li>
