--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>Ambili A.R</h2>
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="About.html">About</a></li>
             <li><a href="education.html">Education</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="publications.html">Publications</a></li>
