--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ambili A.R | Professional CV</title>
+    <title>Home | Ambili A.R</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+
     <div class="sidebar">
         <h2>Ambili A.R</h2>
         <ul>
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="About.html">About</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="education.html">Education</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="publications.html">Publications</a></li>
@@ -23,25 +24,22 @@
     </div>
 
     <div class="content">
-        <h1>Welcome to My Site</h1>
+
+        <!-- ⭐ ADDED PROFILE HEADER SECTION ⭐ -->
+        <div class="profile-header">
+            <img src="assets/myphoto.jpg" alt="Profile Photo" class="profile-photo">
+            <h1 class="main-title">Ambili A.R</h1>
+            <p class="quote">"Strive not to be a success, but rather to be of value."</p>
+        </div>
+        <!-- ⭐ END PROFILE SECTION ⭐ -->
+
+        <h2>Welcome</h2>
         <p>
-            I am <strong>Ambili A.R</strong>, Assistant Professor in the Department of Electronics and Communication Engineering at FISAT.
-            With extensive academic, research, and administrative experience, I have contributed to numerous projects, publications,
-            conferences, and institutional development activities.
+            Welcome to my professional portfolio. Explore to learn more about my academic journey,
+            research contributions, projects, and achievements.
         </p>
 
-        <h2>Highlights</h2>
-        <ul>
-            <li>Pursuing PhD in Deep Learning based Speech Processing</li>
-            <li>Over 17 years of teaching experience</li>
-            <li>Published multiple research papers in international journals & IEEE conferences</li>
-            <li>Guided 47+ B.Tech and 5 M.Tech projects</li>
-            <li>Expertise in Machine Learning, Deep Learning, NLP, Speech Processing</li>
-        </ul>
-
-        <p>
-            Use the menu on the left to navigate through my academic journey, publications, achievements, and professional contributions.
-        </p>
     </div>
+
 </body>
 </html>
