--- a/index.html
+++ b/index.html
@@ -24,21 +24,11 @@
     </div>
 
     <div class="content">
-
-        <!-- ⭐ ADDED PROFILE HEADER SECTION ⭐ -->
-        <div class="profile-header">
-            <img src="assets/myphoto.jpg" alt="Profile Photo" class="profile-photo">
-            <h1 class="main-title">Ambili A.R</h1>
-            <p class="quote">"Strive not to be a success, but rather to be of value."</p>
-        </div>
-        <!-- ⭐ END PROFILE SECTION ⭐ -->
-
-        <h2>Welcome</h2>
+        <h1>Welcome</h1>
         <p>
-            Welcome to my professional portfolio. Explore to learn more about my academic journey,
-            research contributions, projects, and achievements.
+            Welcome to my personal portfolio website. Explore the sections to learn more about my academic
+            journey, research contributions, professional experience, and achievements.
         </p>
-
     </div>
 
 </body>
