--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
     </div>
 
     <div class="content">
+
         <h1>Welcome</h1>
         <p>
-            Welcome to my personal portfolio website. Explore the sections to learn more about my academic
-            journey, research contributions, professional experience, and achievements.
+            Welcome to my professional portfolio. Explore to learn more about my academic journey,
+            research contributions, projects, and achievements.
         </p>
+
     </div>
 
 </body>
