--- a/About.html
+++ b/About.html
@@ -61,7 +61,7 @@
             </div>
 
             <div class="about-image">
-                <img src="assets/myphoto.JPG" alt="My Photo">
+                <img src="assets/myphoto.jpg" alt="My Photo">
             </div>
 
         </div>
