--- a/About.html
+++ b/About.html
@@ -25,46 +25,43 @@
     <div class="content">
         <h1>About Me</h1>
 
-        <div class="about-container">
-
-            <div class="about-text">
-                <h2>Professional Summary</h2>
-                <p>
-                    I am <strong>Ambili A.R</strong>, a dedicated academician and researcher with extensive experience in teaching, research, and mentoring.
-                    My professional interests include <strong>Machine Learning, Deep Learning, Speech Processing, Natural Language Processing,
-                    and Graph Neural Networks</strong>. With a strong commitment to excellence, I have contributed significantly to
-                    academic development, student guidance, and institutional activities.
-                </p>
-
-                <h2>Career Objective</h2>
-                <p>
-                    To work in an innovative academic and research environment where I can contribute effectively to the growth of students,
-                    the institution, and the larger scientific community while continuously enhancing my professional skills.
-                </p>
-
-                <h2>Key Expertise</h2>
-                <ul>
-                    <li>Machine Learning & Deep Learning</li>
-                    <li>Natural Language Processing</li>
-                    <li>Graph Neural Networks</li>
-                    <li>Digital Speech Processing</li>
-                    <li>Python, MATLAB, VHDL, Embedded Systems</li>
-                </ul>
-
-                <h2>Professional Identity</h2>
-                <p>
-                    • Assistant Professor, Department of Electronics and Communication Engineering, FISAT<br>
-                    • Researcher with publications in reputed international journals and IEEE conferences<br>
-                    • Mentor for more than 47 B.Tech and 5 M.Tech projects<br>
-                    • Active contributor to institutional development, accreditation, and student activities
-                </p>
-            </div>
-
-            <div class="about-image">
-                <img src="assets/myphoto.jpg" alt="My Photo">
-            </div>
-
+        <!-- Photo on the top-right -->
+        <div class="about-image">
+            <img src="assets/myphoto.JPG" alt="My Photo">
         </div>
+
+        <h2>Professional Summary</h2>
+        <p>
+            I am <strong>Ambili A.R</strong>, a dedicated academician and researcher with extensive experience in teaching, 
+            research, and mentoring. My professional interests include 
+            <strong>Machine Learning, Deep Learning, Speech Processing, Natural Language Processing, and Graph Neural Networks</strong>.
+            With a strong commitment to excellence, I have contributed significantly to academic development, student guidance, 
+            and institutional activities.
+        </p>
+
+        <h2>Career Objective</h2>
+        <p>
+            To work in an innovative academic and research environment where I can contribute effectively to the growth of 
+            students, the institution, and the larger scientific community while continuously enhancing my professional skills.
+        </p>
+
+        <h2>Key Expertise</h2>
+        <ul>
+            <li>Machine Learning & Deep Learning</li>
+            <li>Natural Language Processing</li>
+            <li>Graph Neural Networks</li>
+            <li>Digital Speech Processing</li>
+            <li>Python, MATLAB, VHDL, Embedded Systems</li>
+        </ul>
+
+        <h2>Professional Identity</h2>
+        <p>
+            • Assistant Professor, Department of Electronics and Communication Engineering, FISAT<br>
+            • Researcher with publications in reputed international journals and IEEE conferences<br>
+            • Mentor for more than 47 B.Tech and 5 M.Tech projects<br>
+            • Active contributor to institutional development, accreditation, and student activities
+        </p>
+
     </div>
 </body>
 </html>
