--- a/About.html
+++ b/About.html
@@ -23,26 +23,24 @@
     </div>
 
     <div class="content">
-        <h1>About Me</h1>
-
-        <!-- Photo on the top-right -->
+        <!-- FIXED TOP-RIGHT PHOTO -->
         <div class="about-image">
             <img src="assets/myphoto.JPG" alt="My Photo">
         </div>
 
+        <h1>About Me</h1>
+
         <h2>Professional Summary</h2>
         <p>
-            I am <strong>Ambili A.R</strong>, a dedicated academician and researcher with extensive experience in teaching, 
-            research, and mentoring. My professional interests include 
-            <strong>Machine Learning, Deep Learning, Speech Processing, Natural Language Processing, and Graph Neural Networks</strong>.
-            With a strong commitment to excellence, I have contributed significantly to academic development, student guidance, 
-            and institutional activities.
+            I am <strong>Ambili A.R</strong>, a dedicated academician and researcher with extensive experience in teaching,
+            research, and mentoring. My professional interests include <strong>Machine Learning, Deep Learning, Speech Processing,
+            Natural Language Processing, and Graph Neural Networks</strong>.
         </p>
 
         <h2>Career Objective</h2>
         <p>
-            To work in an innovative academic and research environment where I can contribute effectively to the growth of 
-            students, the institution, and the larger scientific community while continuously enhancing my professional skills.
+            To work in an innovative academic and research environment where I can contribute effectively to the growth 
+            of students, the institution, and the scientific community.
         </p>
 
         <h2>Key Expertise</h2>
@@ -56,10 +54,10 @@
 
         <h2>Professional Identity</h2>
         <p>
-            • Assistant Professor, Department of Electronics and Communication Engineering, FISAT<br>
-            • Researcher with publications in reputed international journals and IEEE conferences<br>
-            • Mentor for more than 47 B.Tech and 5 M.Tech projects<br>
-            • Active contributor to institutional development, accreditation, and student activities
+            • Assistant Professor, FISAT<br>
+            • Researcher in reputed journals and IEEE conferences<br>
+            • Mentor for 47+ B.Tech and 5 M.Tech projects<br>
+            • Contributor to accreditation and student activities
         </p>
 
     </div>
