--- a/About.html
+++ b/About.html
@@ -25,7 +25,7 @@
     <div class="content">
         <!-- FIXED TOP-RIGHT PHOTO -->
         <div class="about-image">
-            <img src="assets/myphoto.JPG" alt="My Photo">
+            <img src="assets/myphoto.jpg" alt="My Photo">
         </div>
 
         <h1>About Me</h1>
