--- a/experience.html
+++ b/experience.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="About.html">About</a></li>
           <li><a href="education.html">Education</a></li>
           <li><a href="experience.html" class="active">Experience</a></li>
           <li><a href="publications.html">Publications</a></li>
