--- a/About.html
+++ b/About.html
@@ -32,8 +32,10 @@
 
         <h2>Professional Summary</h2>
         <p>
-            I am <strong>Ambili A.R</strong>, a dedicated academician and researcher with extensive experience in teaching, research, and mentoring. My professional interests include <strong>Machine Learning, Deep Learning, Speech Processing, Natural Language Processing, and Graph Neural Networks</strong>.
-        </p>
+           I am Ambili A.R, a dedicated academician and researcher with extensive experience in teaching,
+    research, and mentoring.<br><br>
+    My professional interests include Machine Learning, Deep Learning, Speech Processing,
+    Natural Language Processing, and Graph Neural Networks.
 
         <h2>Career Objective</h2>
         <p>
