--- a/About.html
+++ b/About.html
@@ -33,9 +33,10 @@
         <h2>Professional Summary</h2>
         <p>
            I am Ambili A.R, a dedicated academician and researcher with extensive experience in teaching,
-    research, and mentoring.<br><br>
+    research, and mentoring.</p>
+        <p>
     My professional interests include Machine Learning, Deep Learning, Speech Processing,
-    Natural Language Processing, and Graph Neural Networks.
+    Natural Language Processing, and Graph Neural Networks.</p>
 
         <h2>Career Objective</h2>
         <p>
