--- a/About.html
+++ b/About.html
@@ -23,7 +23,8 @@
     </div>
 
     <div class="content">
-        <!-- FIXED TOP-RIGHT PHOTO -->
+
+        <!-- FIXED TOP RIGHT IMAGE -->
         <div class="about-image">
             <img src="assets/myphoto.jpg" alt="My Photo">
         </div>
@@ -32,11 +33,11 @@
 
         <h2>Professional Summary</h2>
         <p>
-           I am Ambili A.R, a dedicated academician and researcher with extensive experience in teaching,
-    research, and mentoring.</p>
-        <p>
-    My professional interests include Machine Learning, Deep Learning, Speech Processing,
-    Natural Language Processing, and Graph Neural Networks.</p>
+            I am <strong>Ambili A.R</strong>, a dedicated academician and researcher with extensive experience in teaching,
+            research, and mentoring.<br><br>
+            My professional interests include <strong>Machine Learning, Deep Learning, Speech Processing,
+            Natural Language Processing, and Graph Neural Networks</strong>.
+        </p>
 
         <h2>Career Objective</h2>
         <p>
