--- a/About.html
+++ b/About.html
@@ -36,7 +36,7 @@
             I am <strong>Ambili A.R</strong>, a dedicated academician and researcher with extensive experience in teaching,
             research, and mentoring.<br><br>
             My professional interests include <strong>Machine Learning, Deep Learning, Speech Processing,
-            Natural Language Processing, and Graph Neural Networks</strong>.
+            Natural Language Processing, and GNN</strong>.
         </p>
 
         <h2>Career Objective</h2>
