--- a/publications.html
+++ b/publications.html
@@ -65,18 +65,19 @@
       <li>
         A. R. Ambili, Christ Jose, A. Johny, A. A. M. Arjun, and D. Dominic, 
         “IoT-Based Vehicle Emission Monitoring System with Real-Time Pollution Detection and Automatic Number Plate Recognition,” 
-        IJARCCE, vol. 14, no. 10, 2025.
+        International Journal of Advanced Research in Computer and Communication Engineering (IJARCCE), 
+        vol. 14, no. 10, 2025. doi: 10.17148/IJARCCE.2025.141008.
       </li>
 
       <li>
         A. R. Ambili, Jinan T., M. P. Mohith, M. Arif, and Nandana Johnson, 
         “Smart Maritime Border Control System with Real-Time Environmental Monitoring,” 
-        IJARCCE, vol. 14, no. 10, 2025.
+        IJARCCE, vol. 14, no. 10, 2025. doi: 10.17148/IJARCCE.2025.141007.
       </li>
 
       <li>
         “A Real-Time Horn Detection And Directional Alert System For Drivers With Hearing Loss,” 
-        IJIRT, 2025.
+        IJIRT, ISSN: 2349-6002, 2025.
       </li>
 
       <li>
@@ -86,7 +87,7 @@
 
       <li>
         “Integrating Vision and Intelligence: A Review of Dog Breed Detection Using Machine Learning,” 
-        JETIR.
+        JETIR, ISSN: 2349-5162.
       </li>
 
       <li>
@@ -96,8 +97,9 @@
 
       <li>
         Ambili A.R, 
-        “A Comprehensive Review on Speech Spoofing Detection,” 
-        International Journal of All Research Education and Scientific Method, 2023.
+        “A Comprehensive Review on Speech Spoofing Detection: A Journey from Conventional to Deep Learning Methods,” 
+        International Journal of All Research Education and Scientific Method, 
+        Volume 11, Issue 6, 2023.
       </li>
     </ol>
 
@@ -105,79 +107,81 @@
     <ol>
       <li>
         A. R. Ambili and R. C. Roy, 
-        “Hybrid Graph Neural Architectures and Acoustic–Contextual Feature Fusion,”  
-        National Conference on Graph Theory and Its Applications, 2025.
+        “Hybrid Graph Neural Architectures and Acoustic–Contextual Feature Fusion for Indian Language Linguistics,”  
+        National Conference on Graph Theory and Its Applications, FISAT, Angamaly, Oct. 14, 2025.
       </li>
 
       <li>
         A. R. Ambili, J. T. Jinan, M. P. Mohith, M. Arif, and N. Johnson, 
-        “A Comparative Evaluation of Graph Neural Network and Random Forest Approaches,”  
-        FISAT, 2025.
+        “A Comparative Evaluation of Graph Neural Network and Random Forest Approaches for Efficient Fall Detection,”  
+        National Conference on Graph Theory and Its Applications, FISAT, 2025.
       </li>
 
       <li>
         D. S., A. A. R, S. Subhash, S. B. P., R. R., and N. S., 
-        "Intelligent Rescue Rover for Human Detection," 
-        ACCTHPA 2025, IEEE.
+        "Intelligent Rescue Rover for Human Detection using Transfer Learning and Embedded Systems," 
+        ACCTHPA 2025, IEEE. doi: 10.1109/ACCTHPA65749.2025.11168507.
       </li>
 
       <li>
-        “Leveraging Augmented Samples as an Auxiliary Classifier,”  
-        2nd International Conference on Trends in Engineering Systems and Technologies, 2025.
+        “Leveraging Augmented Samples as an Auxiliary Classifier for Enhancing Spoken Language Identification,”  
+        2nd International Conference on Trends in Engineering Systems and Technologies,  
+        April 3–5, 2025. (Scopus Indexed)
       </li>
 
       <li>
         “Real Time Malayalam Speech to MSL Interpreter,”  
-        IEEE 4th International Conference, 2025.
+        IEEE 4th International Conference on Advances in Computing, Communication, Embedded and Secure Systems,  
+        June 11–13, 2025. (Scopus Indexed)
       </li>
 
       <li>
         A. A. R and R. C. Roy, 
-        "Local and Global Context Feature Fusion,” 
-        ISENSE 2024, IEEE.
+        "Local and Global Context Feature Fusion for Effective Spoken Language Identification," 
+        ISENSE 2024, IEEE. doi: 10.1109/ISENSE63713.2024.10872051. (Scopus Indexed)
       </li>
 
       <li>
-        “A Multimodal Fusion Approach Using Image and Audio,”  
-        KETKON 2024.
+        “A Multimodal Fusion Approach Using Image and Audio for Effective Bird Detection in Agriculture,”  
+        KETKON 2024, APJAKTU.
       </li>
 
       <li>
-        “A CNN-Powered Surveillance System for Malayalam Offensive Language Detection,”  
-        KETKON 2024.
+        “A CNN-Powered Surveillance System for Real-Time Detection of Offensive Malayalam Language,”  
+        KETKON 2024, APJAKTU.
       </li>
 
       <li>
         A. R. Ambili, R. C. Roy,  
-        “Spoken Language Identification of Indian Languages in Noisy Environments,”  
-        IC3SIS 2022, IEEE.
+        “Spoken Language Identification of Indian Languages in Adversarial Synthetic and Noisy Environments,”  
+        IC3SIS 2022, IEEE. doi: 10.1109/IC3SIS54991.2022.9885560.
       </li>
 
       <li>
         A. R. Ambili, R. C. Roy,  
         “Multi Tasking Synthetic Speech Detection on Indian Languages,”  
-        ICITIIT 2022, IEEE.
+        ICITIIT 2022, IEEE. doi: 10.1109/ICITIIT54346.2022.9744221. (Scopus Indexed)
       </li>
 
       <li>
-        “Comparative Analysis of FUSION-LDA and FUSION-PCA,”  
+        “Comparative Analysis of FUSION-LDA and FUSION-PCA for Facial Recognition,”  
         ICISECT 2021.
       </li>
 
       <li>
         Johnson, J., Ambili, A.R., Pearlsy P.V.,  
         “Motion Video KNN-SVD Denoising Algorithm,”  
-        ICECDS 2017, IEEE.
+        ICECDS 2017, IEEE. (Scopus Indexed)
       </li>
 
       <li>
         “Secure Analog Joint Source Channel Coding for Image Transmission,”  
-        Multinational Colloquium, 2017.
+        Multinational Colloquium on Advances in Technology, 2017.
       </li>
 
       <li>
         “SignLipDetectron,”  
-        International Conference on Advanced Materials, 2024.
+        International Conference on Advanced Materials and Startup Ecosystem, 2024.
       </li>
     </ol>
 
