--- a/publications.html
+++ b/publications.html
@@ -76,17 +76,13 @@
       </li>
 
       <li>
-        “A Real-Time Horn Detection And Directional Alert System For Drivers With Hearing Loss,” 
-        IJIRT, ISSN: 2349-6002, 2025.
+       A. R. Ambili, P. S. Suryanarayanan, M. Ijilal, N. A. M. Ajmal, and M. Vimal, A Real-Time Horn Detection And Directional Alert System For Drivers With Hearing Loss” in  International Journal of innovative research in Technology, ISSN:2349-6002, 2025 3. 
+      <li>
+        Touch-to-Talk: A GUI-Based, Cost-Effective Tactile Robot for ASL Gesture Generation from Text  Images” in International Journal of Advanced Research in Computer and Communication Engineering, ISSN 2278-1021, 2025 .
       </li>
 
       <li>
-        “Touch-to-Talk: A GUI-Based, Cost-Effective Tactile Robot for ASL Gesture Generation from Text Images,” 
-        IJARCCE, 2025.
-      </li>
-
-      <li>
-        “Integrating Vision and Intelligence: A Review of Dog Breed Detection Using Machine Learning,” 
+        A. R. Ambili, A. Paul, A. Shanmughan, A. M. Antony, and C. Joy,“Integrating Vision and Intelligence: A Review of Dog Breed Detection Using Machine Learning,” 
         JETIR, ISSN: 2349-5162.
       </li>
 
