--- a/publications.html
+++ b/publications.html
@@ -38,6 +38,14 @@
   <div class="section">
     <h2>Research Outcomes</h2>
     <p>
+  <strong>Check out my Google Scholar profile:</strong><br>
+  <img src="https://cdn-icons-png.flaticon.com/512/300/300221.png" width="22" style="vertical-align: middle; margin-right: 6px;">
+  <a href="https://scholar.google.com/citations?user=1uknL7gAAAAJ&hl=en" target="_blank">
+    Visit my Google Scholar page
+  </a>
+</p>
+
+    <p>
       Published research papers in IEEE and Scopus-indexed international conferences with specialization 
       in spoken language identification, speech synthesis, and deep learning applications. Currently active 
       in multidisciplinary research and guiding project proposals for funding.
