--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="education.html">Education</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="publications.html">Publications</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="project.html">Projects</a></li>
             <li><a href="awards.html">Awards</a></li>
             <li><a href="responsibilities.html">Responsibilities</a></li>
             <li><a href="contact.html">Contact</a></li>
