--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <li><a href="publications.html">Publications</a></li>
             <li><a href="project.html">Projects</a></li>
             <li><a href="awards.html">Awards</a></li>
+            <li><a href="funds.html">Funds and Patents</a></li>
+             <li><a href="training.html">Professional Training and FDPs </a></li>
+            <li><a href="responsibilities.html">Responsibilities</a></li>
+             <li><a href="course.html">Course Enrichment</a></li>
             <li><a href="responsibilities.html">Responsibilities</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
