--- a/education.html
+++ b/education.html
@@ -15,15 +15,17 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="education.html" class="active">Education</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="publications.html">Publications</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="awards.html">Awards</a></li>
-          <li><a href="responsibilities.html">Responsibilities</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+            <li><a class="active" href="About.html">About</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="awards.html">Awards</a></li>
+             <li><a href="funds.html">Funds and Patents</a></li>
+             <li><a href="training.html">Professional Training and FDPs </a></li>
+            <li><a href="responsibilities.html">Responsibilities</a></li>
+             <li><a href="course.html">Course Enrichment</a></li>
+            <li><a href="contact.html">Contact</a></li>
       </nav>
       <div class="download">
         <a href="/mnt/data/AMBILI_BIODATA_NEW.docx" download>Download CV (DOCX)</a>
