--- a/course.html
+++ b/course.html
@@ -1,10 +1,27 @@
 <div class="section">
+    <h2>Courses Handled – 2025</h2>
+
+    <ul>
+        <li><strong>S4 Elective:</strong> Machine Learning (KTU – 2025)</li>
+        <li><strong>S3 M.Tech:</strong> Foundations of Data Science</li>
+        <li><strong>S3 M.Tech:</strong> Pattern Recognition</li>
+        <li><strong>S2 M.Tech:</strong> Image and Video Processing</li>
+    </ul>
+
+    <p>
+        <strong>KTU S4 Machine Learning (Elective) – Course Link:</strong><br>
+        👉 <a href="#" target="_blank">Click here to view the official course details</a>
+    </p>
+</div>
+
+
+<div class="section">
     <h2>Teaching & Curriculum Delivery</h2>
 
     <p>
-        Delivered undergraduate and postgraduate courses in core and advanced subjects including 
-        <strong>Pattern Recognition, Image and Video Processing, Communication System Design, Microprocessors, 
-        Digital Signal Processing (DSP), Data Communication Techniques, and Introduction to Programming.</strong>
+        Delivered undergraduate and postgraduate courses in core and advanced subjects including  
+        <strong>Pattern Recognition, Image and Video Processing, Communication System Design, Microprocessors,  
+        DSP, Data Communication Techniques, and Introduction to Programming.</strong>
     </p>
 
     <h3>Subjects Taught</h3>
@@ -18,22 +35,19 @@
 
     <h4>B.Tech Courses</h4>
     <ul>
-        <li>
-            <strong>S1 &amp; S2:</strong> Introduction to Electronics, Introduction to Programming in C, Python
-        </li>
+        <li><strong>S1 &amp; S2:</strong> Introduction to Electronics, Introduction to Programming in C, Python</li>
         <li>
             <strong>S3 &amp; S4:</strong> Electronic Circuits–I, Solid State Devices, Analog Circuits, 
-            Linear Integrated Circuits, Signals and Systems, Data Communication Techniques, Analog Communication
+            Linear Integrated Circuits, Signals &amp; Systems, Data Communication Techniques, Analog Communication
         </li>
         <li>
             <strong>S5 &amp; S6:</strong> DSP, Electromagnetic Theory, Antenna &amp; Wave Propagation, 
             Digital Communication Techniques, Control Systems, Microprocessor &amp; Controller Applications
         </li>
-        <li>
-            <strong>S7 &amp; S8:</strong> Machine Learning, Data Acquisition &amp; Communication, Computer Networks
-        </li>
+        <li><strong>S7 &amp; S8:</strong> Machine Learning, Data Acquisition &amp; Communication, Computer Networks</li>
     </ul>
 </div>
+
 
 <div class="section">
     <h2>Curriculum Enrichment & Student Development</h2>
@@ -58,13 +72,4 @@
             hosted by Dept. of ECE, FISAT as part of <strong>AGNITIO 2022</strong>
         </li>
     </ul>
-</div>
-
-<div class="section">
-    <h2>KTU New Elective – Machine Learning (S4)</h2>
-
-    <p>
-        View the official KTU S4 Elective <strong>Machine Learning</strong> course page:  
-        <a href="#" target="_blank"><strong>Click here for the course details</strong></a>
-    </p>
 </div>
