--- a/publications.html
+++ b/publications.html
@@ -3,191 +3,194 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Research Outcomes — Publications | Ambili A.R</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 20px;
-      background: #f7f7f7;
-    }
-    h2 {
-      color: #333;
-      border-left: 6px solid #0077cc;
-      padding-left: 10px;
-    }
-    h3, h4 {
-      color: #444;
-      margin-top: 25px;
-    }
-    ol, ul {
-      margin-left: 20px;
-    }
-    .section {
-      background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      margin-bottom: 20px;
-    }
-  </style>
+  <title>Publications | Ambili A.R</title>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
 
-  <div class="section">
-    <h2>Research Outcomes</h2>
-    <p>
-  <strong>Check out my Google Scholar profile:</strong><br>
-  <img src="https://cdn-icons-png.flaticon.com/512/300/300221.png" width="22" style="vertical-align: middle; margin-right: 6px;">
-  <a href="https://scholar.google.com/citations?user=1uknL7gAAAAJ&hl=en" target="_blank">
-    Visit my Google Scholar page
-  </a>
-</p>
-
-    <p>
-      Published research papers in IEEE and Scopus-indexed international conferences with specialization 
-      in spoken language identification, speech synthesis, and deep learning applications. Currently active 
-      in multidisciplinary research and guiding project proposals for funding.
-    </p>
+  <!-- Sidebar Navigation -->
+  <div class="sidebar">
+    <h2>Ambili A.R</h2>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="education.html">Education</a></li>
+      <li><a href="experience.html">Experience</a></li>
+      <li><a class="active" href="publications.html">Publications</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="awards.html">Awards</a></li>
+      <li><a href="responsibilities.html">Responsibilities</a></li>
+      <li><a href="training.html">Training</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </div>
 
-  <div class="section">
-    <h3>Research & Publications</h3>
+  <!-- Main Content -->
+  <div class="content">
 
-    <h4>Journal Publications</h4>
-    <ol>
-      <li>
-        A. R. Ambili and R. C. Roy, 
-        "The Effect of Synthetic Voice Data Augmentation on Spoken Language Identification on Indian Languages," 
-        IEEE Access, vol. 11, pp. 102391-102407, 2023, doi: 10.1109/ACCESS.2023.3316142. (SCIE Indexed)
-      </li>
+    <div class="section">
+      <h2>Research Outcomes</h2>
 
-      <li>
-        Ambili A.R, Christy Jose, Nivedhitha, Rita Roy, and Sona Rasheed, 
-        "Intelligent Automation of Garment Folding and Ironing Using Servo-Actuated Robotics," 
-        International Journal of Innovative Research in Technology (IJIRT), 
-        Volume 12, Issue 5, 2025.
-      </li>
+      <p>
+        <strong>Check out my Google Scholar profile:</strong><br>
+        <img src="https://cdn-icons-png.flaticon.com/512/300/300221.png" width="22" style="vertical-align: middle; margin-right: 6px;">
+        <a href="https://scholar.google.com/citations?user=1uknL7gAAAAJ&hl=en" target="_blank">
+          Visit my Google Scholar page
+        </a>
+      </p>
 
-      <li>
-        A. R. Ambili, Christ Jose, A. Johny, A. A. M. Arjun, and D. Dominic, 
-        “IoT-Based Vehicle Emission Monitoring System with Real-Time Pollution Detection and Automatic Number Plate Recognition,” 
-        International Journal of Advanced Research in Computer and Communication Engineering (IJARCCE), 
-        vol. 14, no. 10, 2025. doi: 10.17148/IJARCCE.2025.141008.
-      </li>
+      <p>
+        Published research papers in IEEE and Scopus-indexed international conferences with specialization 
+        in spoken language identification, speech synthesis, and deep learning applications. Currently active 
+        in multidisciplinary research and guiding project proposals for funding.
+      </p>
+    </div>
 
-      <li>
-        A. R. Ambili, Jinan T., M. P. Mohith, M. Arif, and Nandana Johnson, 
-        “Smart Maritime Border Control System with Real-Time Environmental Monitoring,” 
-        IJARCCE, vol. 14, no. 10, 2025. doi: 10.17148/IJARCCE.2025.141007.
-      </li>
+    <div class="section">
+      <h3>Research & Publications</h3>
 
-      <li>
-       A. R. Ambili, P. S. Suryanarayanan, M. Ijilal, N. A. M. Ajmal, and M. Vimal, A Real-Time Horn Detection And Directional Alert System For Drivers With Hearing Loss” in  International Journal of innovative research in Technology, ISSN:2349-6002, 2025 3. 
-      <li>
-        Touch-to-Talk: A GUI-Based, Cost-Effective Tactile Robot for ASL Gesture Generation from Text  Images” in International Journal of Advanced Research in Computer and Communication Engineering, ISSN 2278-1021, 2025 .
-      </li>
+      <h4>Journal Publications</h4>
+      <ol>
+        <li>
+          A. R. Ambili and R. C. Roy, 
+          "The Effect of Synthetic Voice Data Augmentation on Spoken Language Identification on Indian Languages," 
+          IEEE Access, vol. 11, pp. 102391-102407, 2023, doi: 10.1109/ACCESS.2023.3316142. (SCIE Indexed)
+        </li>
 
-      <li>
-        A. R. Ambili, A. Paul, A. Shanmughan, A. M. Antony, and C. Joy,“Integrating Vision and Intelligence: A Review of Dog Breed Detection Using Machine Learning,” 
-        JETIR, ISSN: 2349-5162.
-      </li>
+        <li>
+          Ambili A.R, Christy Jose, Nivedhitha, Rita Roy, and Sona Rasheed, 
+          "Intelligent Automation of Garment Folding and Ironing Using Servo-Actuated Robotics," 
+          International Journal of Innovative Research in Technology (IJIRT), 
+          Volume 12, Issue 5, 2025.
+        </li>
 
-      <li>
-        “STUDENT RECOMMENDATION SYSTEM: An OCR-Based Certificate Detection Approach,”  
-        IJARCCE, 2025.
-      </li>
+        <li>
+          A. R. Ambili, Christ Jose, A. Johny, A. A. M. Arjun, and D. Dominic, 
+          “IoT-Based Vehicle Emission Monitoring System with Real-Time Pollution Detection and Automatic Number Plate Recognition,” 
+          International Journal of Advanced Research in Computer and Communication Engineering (IJARCCE), 
+          vol. 14, no. 10, 2025. doi: 10.17148/IJARCCE.2025.141008.
+        </li>
 
-      <li>
-        Ambili A.R, 
-        “A Comprehensive Review on Speech Spoofing Detection: A Journey from Conventional to Deep Learning Methods,” 
-        International Journal of All Research Education and Scientific Method, 
-        Volume 11, Issue 6, 2023.
-      </li>
-    </ol>
+        <li>
+          A. R. Ambili, Jinan T., M. P. Mohith, M. Arif, and Nandana Johnson, 
+          “Smart Maritime Border Control System with Real-Time Environmental Monitoring,” 
+          IJARCCE, vol. 14, no. 10, 2025. doi: 10.17148/IJARCCE.2025.141007.
+        </li>
 
-    <h4>Conference Publications</h4>
-    <ol>
-      <li>
-        A. R. Ambili and R. C. Roy, 
-        “Hybrid Graph Neural Architectures and Acoustic–Contextual Feature Fusion for Indian Language Linguistics,”  
-        National Conference on Graph Theory and Its Applications, FISAT, Angamaly, Oct. 14, 2025.
-      </li>
+        <li>
+          A. R. Ambili, P. S. Suryanarayanan, M. Ijilal, N. A. M. Ajmal, and M. Vimal,  
+          “A Real-Time Horn Detection And Directional Alert System For Drivers With Hearing Loss,”  
+          International Journal of Innovative Research in Technology, ISSN: 2349-6002, 2025.
+        </li>
 
-      <li>
-        A. R. Ambili, J. T. Jinan, M. P. Mohith, M. Arif, and N. Johnson, 
-        “A Comparative Evaluation of Graph Neural Network and Random Forest Approaches for Efficient Fall Detection,”  
-        National Conference on Graph Theory and Its Applications, FISAT, 2025.
-      </li>
+        <li>
+          “Touch-to-Talk: A GUI-Based, Cost-Effective Tactile Robot for ASL Gesture Generation from Text Images,”  
+          International Journal of Advanced Research in Computer and Communication Engineering, ISSN 2278-1021, 2025.
+        </li>
 
-      <li>
-        D. S., A. A. R, S. Subhash, S. B. P., R. R., and N. S., 
-        "Intelligent Rescue Rover for Human Detection using Transfer Learning and Embedded Systems," 
-        ACCTHPA 2025, IEEE. doi: 10.1109/ACCTHPA65749.2025.11168507.
-      </li>
+        <li>
+          A. R. Ambili, A. Paul, A. Shanmughan, A. M. Antony, and C. Joy,  
+          “Integrating Vision and Intelligence: A Review of Dog Breed Detection Using Machine Learning,” 
+          JETIR, ISSN: 2349-5162.
+        </li>
 
-      <li>
-        “Leveraging Augmented Samples as an Auxiliary Classifier for Enhancing Spoken Language Identification,”  
-        2nd International Conference on Trends in Engineering Systems and Technologies,  
-        April 3–5, 2025. (Scopus Indexed)
-      </li>
+        <li>
+          “STUDENT RECOMMENDATION SYSTEM: An OCR-Based Certificate Detection Approach,”  
+          IJARCCE, 2025.
+        </li>
 
-      <li>
-        “Real Time Malayalam Speech to MSL Interpreter,”  
-        IEEE 4th International Conference on Advances in Computing, Communication, Embedded and Secure Systems,  
-        June 11–13, 2025. (Scopus Indexed)
-      </li>
+        <li>
+          Ambili A.R, 
+          “A Comprehensive Review on Speech Spoofing Detection: A Journey from Conventional to Deep Learning Methods,” 
+          International Journal of All Research Education and Scientific Method, 
+          Volume 11, Issue 6, 2023.
+        </li>
+      </ol>
 
-      <li>
-        A. A. R and R. C. Roy, 
-        "Local and Global Context Feature Fusion for Effective Spoken Language Identification," 
-        ISENSE 2024, IEEE. doi: 10.1109/ISENSE63713.2024.10872051. (Scopus Indexed)
-      </li>
+      <h4>Conference Publications</h4>
+      <ol>
+        <li>
+          A. R. Ambili and R. C. Roy, 
+          “Hybrid Graph Neural Architectures and Acoustic–Contextual Feature Fusion for Indian Language Linguistics,”  
+          National Conference on Graph Theory and Its Applications, FISAT, Angamaly, Oct. 14, 2025.
+        </li>
 
-      <li>
-        “A Multimodal Fusion Approach Using Image and Audio for Effective Bird Detection in Agriculture,”  
-        KETKON 2024, APJAKTU.
-      </li>
+        <li>
+          A. R. Ambili, J. T. Jinan, M. P. Mohith, M. Arif, and N. Johnson, 
+          “A Comparative Evaluation of Graph Neural Network and Random Forest Approaches for Efficient Fall Detection,”  
+          National Conference on Graph Theory and Its Applications, FISAT, 2025.
+        </li>
 
-      <li>
-        “A CNN-Powered Surveillance System for Real-Time Detection of Offensive Malayalam Language,”  
-        KETKON 2024, APJAKTU.
-      </li>
+        <li>
+          D. S., A. A. R, S. Subhash, S. B. P., R. R., and N. S., 
+          "Intelligent Rescue Rover for Human Detection using Transfer Learning and Embedded Systems," 
+          ACCTHPA 2025, IEEE. doi: 10.1109/ACCTHPA65749.2025.11168507.
+        </li>
 
-      <li>
-        A. R. Ambili, R. C. Roy,  
-        “Spoken Language Identification of Indian Languages in Adversarial Synthetic and Noisy Environments,”  
-        IC3SIS 2022, IEEE. doi: 10.1109/IC3SIS54991.2022.9885560.
-      </li>
+        <li>
+          “Leveraging Augmented Samples as an Auxiliary Classifier for Enhancing Spoken Language Identification,”  
+          2nd International Conference on Trends in Engineering Systems and Technologies,  
+          April 3–5, 2025. (Scopus Indexed)
+        </li>
 
-      <li>
-        A. R. Ambili, R. C. Roy,  
-        “Multi Tasking Synthetic Speech Detection on Indian Languages,”  
-        ICITIIT 2022, IEEE. doi: 10.1109/ICITIIT54346.2022.9744221. (Scopus Indexed)
-      </li>
+        <li>
+          “Real Time Malayalam Speech to MSL Interpreter,”  
+          IEEE 4th International Conference on Advances in Computing, Communication, Embedded and Secure Systems,  
+          June 11–13, 2025. (Scopus Indexed)
+        </li>
 
-      <li>
-        “Comparative Analysis of FUSION-LDA and FUSION-PCA for Facial Recognition,”  
-        ICISECT 2021.
-      </li>
+        <li>
+          A. A. R and R. C. Roy, 
+          "Local and Global Context Feature Fusion for Effective Spoken Language Identification," 
+          ISENSE 2024, IEEE. doi: 10.1109/ISENSE63713.2024.10872051. (Scopus Indexed)
+        </li>
 
-      <li>
-        Johnson, J., Ambili, A.R., Pearlsy P.V.,  
-        “Motion Video KNN-SVD Denoising Algorithm,”  
-        ICECDS 2017, IEEE. (Scopus Indexed)
-      </li>
+        <li>
+          “A Multimodal Fusion Approach Using Image and Audio for Effective Bird Detection in Agriculture,”  
+          KETKON 2024, APJAKTU.
+        </li>
 
-      <li>
-        “Secure Analog Joint Source Channel Coding for Image Transmission,”  
-        Multinational Colloquium on Advances in Technology, 2017.
-      </li>
+        <li>
+          “A CNN-Powered Surveillance System for Real-Time Detection of Offensive Malayalam Language,”  
+          KETKON 2024, APJAKTU.
+        </li>
 
-      <li>
-        “SignLipDetectron,”  
-        International Conference on Advanced Materials and Startup Ecosystem, 2024.
-      </li>
-    </ol>
+        <li>
+          A. R. Ambili, R. C. Roy,  
+          “Spoken Language Identification of Indian Languages in Adversarial Synthetic and Noisy Environments,”  
+          IC3SIS 2022, IEEE. doi: 10.1109/IC3SIS54991.2022.9885560.
+        </li>
+
+        <li>
+          A. R. Ambili, R. C. Roy,  
+          “Multi Tasking Synthetic Speech Detection on Indian Languages,”  
+          ICITIIT 2022, IEEE. doi: 10.1109/ICITIIT54346.2022.9744221. (Scopus Indexed)
+        </li>
+
+        <li>
+          “Comparative Analysis of FUSION-LDA and FUSION-PCA for Facial Recognition,”  
+          ICISECT 2021.
+        </li>
+
+        <li>
+          Johnson, J., Ambili, A.R., Pearlsy P.V.,  
+          “Motion Video KNN-SVD Denoising Algorithm,”  
+          ICECDS 2017, IEEE. (Scopus Indexed)
+        </li>
+
+        <li>
+          “Secure Analog Joint Source Channel Coding for Image Transmission,”  
+          Multinational Colloquium on Advances in Technology, 2017.
+        </li>
+
+        <li>
+          “SignLipDetectron,”  
+          International Conference on Advanced Materials and Startup Ecosystem, 2024.
+        </li>
+      </ol>
+
+    </div>
 
   </div>
 
