--- a/education.html
+++ b/education.html
@@ -20,6 +20,7 @@
             <li><a href="experience.html">Experience</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="project.html">Projects</a></li>
+            <li><a href="research.html">My Reserch Activities</a></li>
             <li><a href="awards.html">Awards</a></li>
              <li><a href="funds.html">Funds and Patents</a></li>
              <li><a href="training.html">Professional Training and FDPs </a></li>
