--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <div class="sidebar">
         <h2>Ambili A.R</h2>
         <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="About.html">About</a></li>
+           <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="About.html">About</a></li>
             <li><a href="education.html">Education</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="project.html">Projects</a></li>
+            <li><a href="research.html">My Reserch Activities</a></li>
             <li><a href="awards.html">Awards</a></li>
              <li><a href="funds.html">Funds and Patents</a></li>
              <li><a href="training.html">Professional Training and FDPs </a></li>
